--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,10 +3,14 @@ spring:
     name: ey-backend
   datasource:
     url: jdbc:h2:mem:testdb
-    username: root
-    password: root
+    username: sa
+    password:
     driverClassName: org.h2.Driver
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
 server:
   port: 8080
